<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sessionSettings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_dark"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/session_settings_title"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSettings2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/session_settings_subtitle"
        android:textColor="#444444"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSettings" />

    <TextView
        android:id="@+id/tvDetox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:text="@string/session_settings_detox_duration"
        android:textAllCaps="true"
        android:textColor="#444444"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSettings2" />

    <LinearLayout
        android:id="@+id/llDetoxTimeButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetox">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardTimeFive"
            style="@style/DurationChoiceStyle2"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:text="@string/session_settings_duration_5"
                android:textSize="18sp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardTimeSeven"
            style="@style/DurationChoiceStyle2"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:text="@string/session_settings_duration_7"
                android:textSize="18sp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardTimeTen"
            style="@style/DurationChoiceStyle2"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:text="@string/session_settings_duration_10"
                android:textSize="18sp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardTimeFifteen"
            style="@style/DurationChoiceStyle2"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:text="@string/session_settings_duration_15"
                android:textSize="18sp" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <TextView
        android:id="@+id/tvDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:text="@string/session_settings_difficulty"
        android:textAllCaps="true"
        android:textColor="#444444"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDetoxTimeButtons" />

    <LinearLayout
        android:id="@+id/llSettingsDifficultyButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDifficulty">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardDifficultyBeginner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="16dp"
            app:strokeColor="@color/card_unselected"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="22dp">

                <TextView
                    android:id="@+id/tvDifficultyBeginner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/session_settings_difficulty_beginner"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvDifficultyBeginner2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="center"
                    android:text="@string/session_settings_difficulty_beginner_description"
                    android:textColor="#666666"
                    android:textSize="14sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardDifficultyFighter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="16dp"
            app:strokeColor="@color/card_unselected"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="22dp">

                <TextView
                    android:id="@+id/tvDifficultyFighter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/session_settings_difficulty_fighter"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvDifficultyFighter2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="center"
                    android:text="@string/session_settings_difficulty_fighter_description"
                    android:textColor="#666666"
                    android:textSize="14sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardDifficultyHardcore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="16dp"
            app:strokeColor="@color/card_unselected"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="22dp">

                <TextView
                    android:id="@+id/tvDifficultyHardcore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/session_settings_difficulty_hardcore"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvDifficultyHardcore2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="center"
                    android:text="@string/session_settings_difficulty_hardcore_description"
                    android:textColor="#666666"
                    android:textSize="14sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <View
        android:id="@+id/viewGrayLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#1A1A1A"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llSettingsDifficultyButtons" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardFocusOnly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="#0D0D0D"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewGrayLine"
        app:strokeColor="#1A1A1A"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardFocusOnlyContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="18dp"
            android:paddingVertical="22dp">

            <FrameLayout
                android:id="@+id/flFocusBackground"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/bg_ic_notification"
                app:layout_constraintBottom_toBottomOf="@+id/tvFocusOnly2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvFocusOnly1">

                <ImageView
                    android:id="@+id/ivFocusIcon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_focus_only" />
            </FrameLayout>

            <TextView
                android:id="@+id/tvFocusOnly1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/session_settings_focus_only_title"
                android:textColor="#888888"
                android:textSize="22sp"
                app:layout_constraintStart_toEndOf="@+id/flFocusBackground"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFocusOnly2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/session_settings_focus_only_description"
                android:textColor="#333333"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/flFocusBackground"
                app:layout_constraintTop_toBottomOf="@+id/tvFocusOnly1" />

            <View
                android:id="@+id/viewCircle"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/bg_black_circle"
                app:layout_constraintBottom_toBottomOf="@+id/tvFocusOnly2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvFocusOnly1" />

            <FrameLayout
                android:id="@+id/flCircleGreen"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/bg_green_circle"
                app:layout_constraintBottom_toBottomOf="@+id/tvFocusOnly2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvFocusOnly1">

                <ImageView
                    android:id="@+id/ivCheck"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_check" />
            </FrameLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/inter_bold"
        android:padding="22dp"
        android:text="@string/session_settings_start_detox"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        app:icon="@drawable/ic_arrow_right"
        app:iconGravity="textEnd"
        app:iconSize="26dp"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardFocusOnly" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#0D0D0D"
        android:fontFamily="@font/inter_bold"
        android:padding="22dp"
        android:text="@string/session_settings_cancel"
        android:textColor="#444444"
        android:textSize="20sp"
        app:strokeColor="#1A1A1A"
        app:strokeWidth="2dp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

</androidx.constraintlayout.widget.ConstraintLayout>