<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboarding2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D0D0D"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvOnboarding2First"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/onboarding_two_title"
        android:textAllCaps="true"
        android:textColor="#999999"
        android:textSize="24sp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llOnboarding2Container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOnboarding2First" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineOnboarding2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOnboarding2Allow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0D0D0D"
        android:fontFamily="@font/inter_bold"
        android:paddingVertical="16dp"
        android:text="@string/onboarding_two_button_allow"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="12dp"
        app:icon="@drawable/ic_arrow_right"
        app:iconGravity="textEnd"
        app:iconSize="28dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnOnboarding2NotNow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineOnboarding2"
        app:strokeColor="#888888"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOnboarding2NotNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#0D0D0D"
        android:fontFamily="@font/inter_bold"
        android:paddingVertical="16dp"
        android:text="@string/onboarding_two_button_later"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOnboarding2Allow"
        app:strokeColor="#888888"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>